Bug 245050 - ASSERT(floatConstraints.left || floatConstraints.right) in InlineFormattingGeometry::logicalTopForNextLine
Summary: ASSERT(floatConstraints.left || floatConstraints.right) in InlineFormattingGe...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Layout and Rendering (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: zalan
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2022-09-11 12:04 PDT by zalan
Modified: 2022-09-12 06:48 PDT (History)
5 users (show)

See Also:


Attachments
Patch (3.60 KB, patch)
2022-09-11 12:06 PDT, zalan
no flags Details | Formatted Diff | Diff
Patch (3.79 KB, patch)
2022-09-11 15:21 PDT, zalan
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description zalan 2022-09-11 12:04:12 PDT
ssia
Comment 1 zalan 2022-09-11 12:06:39 PDT
Created attachment 462269 [details]
Patch
Comment 2 zalan 2022-09-11 15:21:41 PDT
Created attachment 462272 [details]
Patch
Comment 3 EWS 2022-09-12 06:47:07 PDT
Committed 254378@main (5ae4a254dd8a): <https://commits.webkit.org/254378@main>

All reviewed patches have been landed. Closing bug and clearing flags on attachment 462272 [details].
Comment 4 Radar WebKit Bug Importer 2022-09-12 06:48:17 PDT
<rdar://problem/99820057>