ASSERT(floatConstraints.left || floatConstraints.right) in InlineFormattingGeometry::logicalTopForNextLine https://bugs.webkit.org/show_bug.cgi?id=245050

Reviewed by Antti Koivisto.

Do not try to compute geometry for the next line (e.g. line top) when there's no next line (i.e. we are at the end of the inline content).

* Source/WebCore/layout/formattingContexts/inline/InlineFormattingContext.cpp:
(WebCore::Layout::InlineFormattingContext::lineLayout):

Canonical link: https://commits.webkit.org/254378@main